--- a/style/style.css
+++ b/style/style.css
@@ -37,27 +37,26 @@
   background-repeat: no-repeat;
   height: 75vh; 
 }
-.formcontainter {
-background-color: black;
-padding: 12rem;
+
+
+.navform {
+  display: flex;
 }
 
-.card1 {
-padding: 1rem;
-border: solid #8e3936;
-border-radius: 2%;
-object-fit: contain;
+.cardimg {
+  object-fit: cover;
+  height: 20vh;
+  width: 90%;
 }
 
 footer {
-margin-top: auto;
+margin-top: 2em;
 background-color: #F42019;
 display: flex;
 justify-content: space-around;
-position:sticky;
-
 
 }
+
 .footerpics {
   max-width: 3rem;
 }
@@ -69,38 +68,30 @@ position:sticky;
 .navstyle a{
     color: brown;
 }
-
-.fa-instagram {
-    background: #125688;
-    color: white;
-    height: 2em;
-    width: 2em;
-  }
-
-  .fa-reddit {
-    background: #ff5700;
-    color: white;
-    height: 2em;
-    width: 2em;
-  }
-
-  .fa-vimeo {
-    background: #45bbff;
-    color: white;
-    height: 2em;
-    width: 2em;
-  }
-
   .layout {
     display: flex;
   flex-direction: column;
   min-height: 100vh;
 
   }
-  .main {
+  main {
     flex-grow: 1;
   }
+
   h1 {
     color: rgb(181, 48, 24);
     opacity: .7;
+  }
+
+.checktest {
+  display: flex;
+}
+
+  @media (min-width: 320px) and (max-width: 768px) {
+    .checksearch {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
   }
